--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <option value="Nazhvan: Land of Wildlife">Driver Guide 12</option>
             <option value="Let’s Have Fun!">Driver Guide 13</option>
           </select>
-          <button class="form__btn">OK</button>
+          <button class="form__btn form__btn--sort">GO!</button>
         </div>
       </form>
 
@@ -77,9 +77,8 @@
             <option value="Sasani">Sasani</option>
             <option value="Prehistory">Prehistory</option>
           </select>
-          <button class="form__btn">OK</button>
+          <button class="form__btn form__btn--timeline">GO!</button>
         </div>
-        <button class="form__btn">OK</button>
       </form>
 
       <ul class="interests">
@@ -178,6 +177,7 @@
     <div class="map__error hidden"></div>
 
     <div id="map">
+      <div class="my_position"><span class="my_position--text"> 🕺</span></div>
     </div>
 
     <div class="modal mo hidden">
