--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <option value="religious">Religious</option>
             <option value="recreational">Recreational</option>
             <option value="art">Art</option>
-            <option value="Naqsh-e Jahan">Driver Guide 1</option>
-            <option value="Inside the Gates of Safavid Court">Driver Guide 2</option>
-            <option value="The Faint Glory of Seljuq Empire">Driver Guide 3</option>
-            <option value="The City of Minarets">Driver Guide 4</option>
-            <option value="Along Zayanderud River">Driver Guide 5</option>
-            <option value="Visiting the Other Side!">Driver Guide 6</option>
-            <option value="The City of Religions">Driver Guide 7</option>
-            <option value="Inside the Living Rooms of History">Driver Guide 8</option>
-            <option value="Let’s Take a Dip in History!">Driver Guide 9</option>
-            <option value="Zurkhaneh: Iranian Classic Workout">Driver Guide 10</option>
-            <option value="Sofeh: Isfahan’s Rooftop">Driver Guide 11</option>
-            <option value="Nazhvan: Land of Wildlife">Driver Guide 12</option>
-            <option value="Let’s Have Fun!">Driver Guide 13</option>
+            <option value="Naqsh-e Jahan">1. Naqsh-e Jahan</option>
+            <option value="Inside the Gates of Safavid Court">2. Inside the Gates of Safavid Court</option>
+            <option value="The Faint Glory of Seljuq Empire">3. The Faint Glory of Seljuq Empire</option>
+            <option value="The City of Minarets">4. The City of Minarets</option>
+            <option value="Along Zayanderud River">5. Along Zayanderud River</option>
+            <option value="Visiting the Other Side!">6. Visiting the Other Side!</option>
+            <option value="The City of Religions">7. The City of Religions</option>
+            <option value="Inside the Living Rooms of History">8. Inside the Living Rooms of History</option>
+            <option value="Let’s Take a Dip in History!">9. Let’s Take a Dip in History!</option>
+            <option value="Zurkhaneh: Iranian Classic Workout">10. Zurkhaneh: Iranian Classic Workout</option>
+            <option value="Sofeh: Isfahan’s Rooftop">11. Sofeh: Isfahan’s Rooftop</option>
+            <option value="Nazhvan: Land of Wildlife">12. Nazhvan: Land of Wildlife</option>
+            <option value="Let’s Have Fun!">13. Let’s Have Fun!</option>
           </select>
           <button class="form__btn form__btn--sort">GO!</button>
         </div>
